--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["graphics", "gui", "multimedia", "rendering"]
 
 [dependencies]
 bitflags = "1.2.1"
+static_assertions = "1.1.0"
 
 [build-dependencies]
 bindgen = "0.56.0"
