--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ keywords = ["sdl2", "wrapper", "binding"]
 categories = ["graphics", "gui", "multimedia", "rendering"]
 
 [dependencies]
+ash = "0.33.0"
 bitflags = "1.2.1"
 static_assertions = "1.1.0"
 
