--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,7 +31,7 @@ jobs:
           args: --all-features
 
       - name: Build SDL2 dependency
-        run: cd SDL2 && ./configure && make -j4
+        run: cd SDL2 && ./configure && make -j4 && cd ..
 
       - name: Build
         run: cargo build --verbose
