--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["MikuroXina <ryosukadnak@gmail.com>"]
 edition = "2018"
 description = "The sdl2 wrapper for Rust."
 repository = "https://github.com/MikuroXina/rich-sdl2-rust"
+documentation = "https://mikuroxina.github.io/rich-sdl2-rust/rich_sdl2_rust/"
 license = "Apache-2.0"
 keywords = ["sdl2", "wrapper", "binding"]
 categories = ["graphics", "gui", "multimedia", "rendering"]
