--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["graphics", "gui", "multimedia", "rendering"]
 [dependencies]
 ash = "0.33.0"
 bitflags = "1.3.2"
+builder-pattern = "0.3.9"
 static_assertions = "1.1.0"
 
 [build-dependencies]
