--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ categories = ["graphics", "gui", "multimedia", "rendering"]
 [dependencies]
 ash = "0.33.0"
 bitflags = "1.3.2"
-builder-pattern = "0.3.9"
 static_assertions = "1.1.0"
+typed-builder = "0.9.0"
 
 [build-dependencies]
 bindgen = "0.59.1"
