--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,12 @@ license = "Apache-2.0"
 keywords = ["sdl2", "wrapper", "binding"]
 categories = ["graphics", "gui", "multimedia", "rendering"]
 
+[features]
+default = []
+vulkan = ["ash"]
+
 [dependencies]
-ash = "0.33.0"
+ash = {version = "0.33.0", optional = true}
 bitflags = "1.3.2"
 static_assertions = "1.1.0"
 typed-builder = "0.9.0"
