--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ categories = ["graphics", "gui", "multimedia", "rendering"]
 [features]
 default = []
 vulkan = ["ash"]
+nightly = ["simd_allocator"]
+simd_allocator = []
 
 [dependencies]
 ash = {version = "0.33.0", optional = true}
