--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,14 +16,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-      - name: Stable with rustfmt and clippy
+      - name: Nightly with rustfmt and clippy
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: nightly
           components: rustfmt, clippy
 
-      - name: Annotate commit with clippy warnings
+      - name: Clippy Check
         uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -32,11 +32,11 @@ jobs:
       - name: Build SDL2 dependency
         run: cd SDL2 && ./configure && make -j4 && cd ..
 
-      - name: Build
+      - name: Build crate
         run: cargo build --verbose
-      - name: Run tests
+      - name: Test crate
         run: cargo test --verbose
-      - name: Run doc
+      - name: Create docs
         run: cargo +nightly doc --all-features --no-deps
 
       - uses: actions/upload-artifact@v2
@@ -57,7 +57,7 @@ jobs:
         with:
           name: doc-artifact
 
-      - name: Deploy
+      - name: Deploy docs
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
