--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,7 +11,12 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
+
     steps:
       - uses: actions/checkout@v2
         with:
@@ -37,10 +42,12 @@ jobs:
         run: cargo build --verbose
       - name: Test crate
         run: cargo test --verbose
-      - name: Create docs
-        run: cargo +nightly doc --all-features --no-deps
 
+      - name: Create docs
+        if: matrix.os == 'ubuntu-latest'
+        run: cargo +nightly doc --all-features --no-deps
       - uses: actions/upload-artifact@v2
+        if: matrix.os == 'ubuntu-latest'
         with:
           name: doc-artifact
           path: target/doc/
