Revert "ci: Apply matrix strategy"
This reverts commit 21c99c64e0de87676bcef3f9d0fdfdd29c591e5c.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,12 +11,7 @@ env:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [windows-latest, ubuntu-latest]
-
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
@@ -43,12 +38,10 @@ jobs:
         run: cargo build --verbose
       - name: Test crate
         run: cargo test --verbose
-
       - name: Create docs
-        if: matrix.os == 'ubuntu-latest'
         run: cargo +nightly doc --all-features --no-deps
+
       - uses: actions/upload-artifact@v2
-        if: matrix.os == 'ubuntu-latest'
         with:
           name: doc-artifact
           path: target/doc/
