--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,5 @@ typed-builder = "0.9.0"
 
 [build-dependencies]
 bindgen = "0.59.1"
-reqwest = "0.11.4"
+reqwest = {version = "0.11.4", features = ["blocking"]}
 zip = "0.5.13"
