--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,7 @@ typed-builder = "0.9.0"
 
 [build-dependencies]
 bindgen = "0.59.1"
+libflate = "1.1.1"
 reqwest = {version = "0.11.4", features = ["blocking"]}
+tar = "0.4.37"
 zip = "0.5.13"
