--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Setup path
+        if: matrix.os == 'windows-latest'
+        shell: cmd
+        run: |
+          echo "C:\msys64\mingw64\bin" >> $GITHUB_PATH
+
       - name: Nightly with rustfmt and clippy
         uses: actions-rs/toolchain@v1
         with:
