--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,7 +34,15 @@ jobs:
           toolchain: nightly
           components: rustfmt, clippy
 
+      - name: Test crate on Windows
+        if: matrix.os == 'windows-latest'
+        shell: cmd
+        run: |
+          set PATH=C:\msys64\mingw64\bin;%PATH%
+          cargo test --verbose
+
       - name: Clippy Check
+        if: matrix.os == 'ubuntu-latest'
         uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -42,8 +50,10 @@ jobs:
           args: --all-features
 
       - name: Build crate
+        if: matrix.os == 'ubuntu-latest'
         run: cargo build --verbose
       - name: Test crate
+        if: matrix.os == 'ubuntu-latest'
         run: cargo test --verbose
       - name: Create docs
         if: matrix.os == 'ubuntu-latest'
