deps!: Switch to use sdl2 2.0.16 (#2)
* fix: Remove submodule

* deps: Add reqwest and zip

* chore: Ignore sdl2 dir

* feat: Switch to use offcial release on unix

* refactor: Refactor with download_sdl2

* feat: Impl on windows

* ci: Apply matrix strategy

* fix: Fix to use mingw version

* fix: Fix decompressing tar.gz

* fix: Fix to use flate2

* fix: Fix file name

* ci: Add RUST_BACKTRACE env

* chore: Log header

* chore: Use tmp file

* ci: Remove build on ci step

* ci: Add installing llvm on windows

* ci: Remove needless steps

* ci: Add setup path

* ci: Add test for win

* chore: Log sdl2 dir content

* ci: Fix extract path

* chore: Fix logging

* ci: Fix to create pack dir

* fix: Fix copy arg

* build: Add assert

* build: Fix to seek tmp file to start

* fix: Fix extract_gzip

* build: Add run make

* ci: Fix sdl2_dir

* build: Fix sdl2_dir

* ci: Split jobs

* build: Fix path resolve

* build: Add SDL2_INSTALL_DIR and Refactor

* build: Fix link search path

* build: Fix to use VC version

* refactor: Remove unused warning

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,14 +8,14 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  RUST_BACKTRACE: 1
 
 jobs:
-  build:
+  build-linux:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
-        with:
-          submodules: recursive
       - name: Nightly with rustfmt and clippy
         uses: actions-rs/toolchain@v1
         with:
@@ -30,9 +30,6 @@ jobs:
           toolchain: nightly
           args: --all-features
 
-      - name: Build SDL2 dependency
-        run: cd SDL2 && ./configure && make -j4 && cd ..
-
       - name: Build crate
         run: cargo build --verbose
       - name: Test crate
@@ -45,15 +42,35 @@ jobs:
           name: doc-artifact
           path: target/doc/
 
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup path
+        shell: cmd
+        run: |
+          echo "C:\msys64\mingw64\bin" >> $GITHUB_PATH
+
+      - name: Nightly with rustfmt and clippy
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          components: rustfmt, clippy
+
+      - name: Test crate on Windows
+        shell: cmd
+        run: |
+          set PATH=C:\msys64\mingw64\bin;%PATH%
+          cargo test --verbose
+
   doc:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-linux
     if: github.event_name == 'push' || github.event.pull_request.merged == true
 
     steps:
       - uses: actions/checkout@v2
-        with:
-          submodules: recursive
       - uses: actions/download-artifact@v2
         with:
           name: doc-artifact
