--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,6 +22,7 @@ jobs:
           profile: minimal
           toolchain: nightly
           components: rustfmt, clippy
+          override: true
 
       - name: Clippy Check
         uses: actions-rs/clippy-check@v1
@@ -53,6 +54,7 @@ jobs:
           profile: minimal
           toolchain: nightly
           components: rustfmt, clippy
+          override: true
 
       - name: Build crate
         shell: cmd
