--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -47,13 +47,10 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: KyleMayes/install-llvm-action@v1
+        with:
+          version: "10.0"
 
-      - name: Setup path
-        shell: cmd
-        run: |
-          echo "C:\msys64\mingw64\bin" >> $GITHUB_PATH
-
-      - uses: ilammy/msvc-dev-cmd@v1
       - name: Nightly with rustfmt and clippy
         uses: actions-rs/toolchain@v1
         with:
@@ -68,11 +65,16 @@ jobs:
         with:
           command: build
           args: --verbose
+        env:
+          LIBCLANG_PATH: C:\Program Files\LLVM\lib
+
       - name: Run cargo test
         uses: actions-rs/cargo@v1
         with:
           command: test
           args: --verbose
+        env:
+          LIBCLANG_PATH: C:\Program Files\LLVM\lib
 
   doc:
     runs-on: ubuntu-latest
