--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,6 @@ simd_allocator = []
 [dependencies]
 ash = {version = "0.33.0", optional = true}
 bitflags = "1.3.2"
+rich-sdl2-sys = {git = "https://github.com/MikuroXina/rich-sdl2-sys", version="0.1.0"}
 static_assertions = "1.1.0"
 typed-builder = "0.9.0"
-
-[build-dependencies]
-bindgen = "0.59.1"
-flate2 = "1.0.22"
-reqwest = {version = "0.11.4", features = ["blocking"]}
-tar = "0.4.37"
-zip = "0.5.13"
