--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -50,6 +50,7 @@ jobs:
       - uses: KyleMayes/install-llvm-action@v1
         with:
           version: "12.0"
+          directory: ${{ runner.temp }}/llvm
 
       - name: Nightly with rustfmt and clippy
         uses: actions-rs/toolchain@v1
@@ -66,7 +67,7 @@ jobs:
           command: build
           args: --verbose
         env:
-          LIBCLANG_PATH: C:\Program Files\LLVM\lib
+          LIBCLANG_PATH: ${{ runner.temp }}/llvm
 
       - name: Run cargo test
         uses: actions-rs/cargo@v1
@@ -74,7 +75,7 @@ jobs:
           command: test
           args: --verbose
         env:
-          LIBCLANG_PATH: C:\Program Files\LLVM\lib
+          LIBCLANG_PATH: ${{ runner.temp }}/llvm
 
   doc:
     runs-on: ubuntu-latest
