--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ typed-builder = "0.9.0"
 [build-dependencies]
 bindgen = "0.59.1"
 flate2 = "1.0.22"
+git2 = "0.13.23"
 reqwest = {version = "0.11.4", features = ["blocking"]}
 tar = "0.4.37"
 zip = "0.5.13"
