--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,7 @@ ash = {version = "0.33.0", optional = true}
 bitflags = "1.3.2"
 static_assertions = "1.1.0"
 typed-builder = "0.9.0"
+rich-sdl2-rust-sys = {path = "./rich-sdl2-rust-sys", version = "0.1.0"}
 
-[build-dependencies]
-bindgen = "0.59.1"
-flate2 = "1.0.22"
-git2 = "0.13.23"
-reqwest = {version = "0.11.4", features = ["blocking"]}
-tar = "0.4.37"
-zip = "0.5.13"
+[workspace]
+members = ["rich-sdl2-rust-sys"]
