--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -50,11 +50,11 @@ jobs:
       - name: Test crate
         run: cargo test --verbose
       - name: Create docs
-        if: matrix.os == ubuntu-latest
+        if: matrix.os == 'ubuntu-latest'
         run: cargo +nightly doc --all-features --no-deps
 
       - uses: actions/upload-artifact@v2
-        if: matrix.os == ubuntu-latest
+        if: matrix.os == 'ubuntu-latest'
         with:
           name: doc-artifact
           path: target/doc/
