ci: Add triplet

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,9 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
+        include:
+          - os: windows-latest
+            triplet: x64-windows-static-md
 
     steps:
       - uses: actions/checkout@v2
@@ -28,6 +31,7 @@ jobs:
           vcpkgDirectory: "${{ github.workspace }}/vcpkg"
           appendedCacheKey: ${{ hashFiles( '**/vcpkg_manifest/vcpkg.json' ) }}
           additionalCachedPaths: ${{ env.BUILD_DIR }}/vcpkg_installed
+          vcpkgTriplet: ${{ matrix.triplet }}
           vcpkgGitCommitId: 5568f110b509a9fd90711978a7cb76bae75bb092
 
       - name: Nightly with rustfmt and clippy
