--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,7 @@ jobs:
         uses: lukka/run-vcpkg@v7
         with:
           setupOnly: true
+          vcpkgDirectory: /vcpkg
           appendedCacheKey: ${{ hashFiles( '**/vcpkg_manifest/vcpkg.json' ) }}
           additionalCachedPaths: ${{ env.BUILD_DIR }}/vcpkg_installed
           vcpkgTriplet: ${{ matrix.triplet }}
