--- a/rich-sdl2-rust-sys/Cargo.toml
+++ b/rich-sdl2-rust-sys/Cargo.toml
@@ -8,6 +8,11 @@ license = "Apache-2.0"
 keywords = ["sdl2", "binding"]
 categories = ["graphics", "gui", "multimedia", "rendering"]
 
+[features]
+default = ["use_pkg_config"]
+use_vcpkg = ["vcpkg"]
+use_pkg_config = ["pkg-config"]
+
 [package.metadata.vcpkg]
 dependencies = ["sdl2"]
 git = "https://github.com/microsoft/vcpkg"
@@ -18,4 +23,5 @@ x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
 
 [build-dependencies]
 bindgen = "0.59.1"
-vcpkg = "0.2.15"
+pkg-config = { version = "0.3.22", optional = true }
+vcpkg = { version = "0.2.15", optional = true }
