--- a/rich-sdl2-rust-sys/Cargo.toml
+++ b/rich-sdl2-rust-sys/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://github.com/MikuroXina/rich-sdl2-rust"
 license = "Apache-2.0"
 keywords = ["sdl2", "binding"]
 categories = ["graphics", "gui", "multimedia", "rendering"]
+links = "SDL2"
 
 [features]
 default = []
