--- a/rich-sdl2-rust-sys/Cargo.toml
+++ b/rich-sdl2-rust-sys/Cargo.toml
@@ -9,11 +9,6 @@ keywords = ["sdl2", "binding"]
 categories = ["graphics", "gui", "multimedia", "rendering"]
 links = "SDL2"
 
-[features]
-default = []
-use_vcpkg = ["vcpkg"]
-use_pkg_config = ["pkg-config"]
-
 [package.metadata.vcpkg]
 dependencies = ["sdl2"]
 git = "https://github.com/microsoft/vcpkg"
@@ -24,5 +19,5 @@ x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
 
 [build-dependencies]
 bindgen = "0.59.1"
-pkg-config = { version = "0.3.22", optional = true }
-vcpkg = { version = "0.2.15", optional = true }
+pkg-config = "0.3.22"
+vcpkg = "0.2.15"
