feat: Add static and dynamic features

--- a/rich-sdl2-rust-sys/Cargo.toml
+++ b/rich-sdl2-rust-sys/Cargo.toml
@@ -9,6 +9,10 @@ keywords = ["sdl2", "binding"]
 categories = ["graphics", "gui", "multimedia", "rendering"]
 links = "SDL2"
 
+[features]
+static = []
+dynamic = []
+
 [package.metadata.vcpkg]
 dependencies = ["sdl2"]
 git = "https://github.com/microsoft/vcpkg"
