--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ default = []
 vulkan = ["ash"]
 nightly = ["simd_allocator"]
 simd_allocator = []
+static = ["rich-sdl2-rust-sys/static"]
+dynamic = ["rich-sdl2-rust-sys/dynamic"]
 
 [dependencies]
 ash = { version = "0.33.0", optional = true }
