--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,19 +12,19 @@ categories = ["graphics", "gui", "multimedia", "rendering"]
 rust-version = "1.56"
 
 [features]
-default = ["use_vcpkg"]
+default = []
 vulkan = ["ash"]
 nightly = ["simd_allocator"]
 simd_allocator = []
-use_vcpkg = ["rich-sdl2-rust-sys/use_vcpkg"]
-use_pkg_config = ["rich-sdl2-rust-sys/use_pkg_config"]
+static = ["rich-sdl2-rust-sys/static"]
+dynamic = ["rich-sdl2-rust-sys/dynamic"]
 
 [dependencies]
 ash = { version = "0.33.0", optional = true }
 bitflags = "1.3.2"
 static_assertions = "1.1.0"
 typed-builder = "0.9.0"
-rich-sdl2-rust-sys = { path = "./rich-sdl2-rust-sys", version = "0.2.0" }
+rich-sdl2-rust-sys = { path = "./rich-sdl2-rust-sys", version = "0.2.1" }
 
 [workspace]
 members = ["rich-sdl2-rust-sys"]
