--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rich-sdl2-rust"
-version = "0.10.1"
+version = "0.10.2"
 authors = ["MikuroXina <ryosukadnak@gmail.com>"]
 edition = "2021"
 description = "The sdl2 wrapper for Rust."
@@ -18,6 +18,7 @@ nightly = ["simd_allocator"]
 simd_allocator = []
 static = ["rich-sdl2-rust-sys/static"]
 dynamic = ["rich-sdl2-rust-sys/dynamic"]
+vendor = ["rich-sdl2-rust-sys/vendor"]
 
 [dependencies]
 ash = { version = "0.33.0", optional = true }
