--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,14 +35,14 @@ jobs:
         run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
 
       - name: Build crate
-        run: cargo build --verbose --features vendor
+        run: cargo build --verbose
       - name: Clippy Check
-        run: cargo clippy --verbose --features vendor
+        run: cargo clippy --verbose
       - name: Test crate
-        run: cargo test --verbose --features vendor
+        run: cargo test --verbose
       - name: Create docs
         if: matrix.os == 'ubuntu-latest'
-        run: cargo +nightly doc --features vendor,nightly,vulkan,simd_allocator --no-deps
+        run: cargo +nightly doc --features nightly,vulkan,simd_allocator --no-deps
 
       - uses: actions/upload-artifact@v2
         if: matrix.os == 'ubuntu-latest'
