chore: Specify default features

--- a/rich-sdl2-rust-sys/Cargo.toml
+++ b/rich-sdl2-rust-sys/Cargo.toml
@@ -10,6 +10,7 @@ categories = ["graphics", "gui", "multimedia", "rendering"]
 links = "SDL2"
 
 [features]
+default = ["dynamic"]
 static = []
 dynamic = []
 vendor = []
