ci: Setup cargo-deny

--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -14,3 +14,5 @@ jobs:
       - uses: actions-rs/audit-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+      - name: cargo-deny
+        uses: EmbarkStudios/cargo-deny-action@v1.2.1
