feat: Add ttf feature and module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ default = ["dynamic"]
 vulkan = ["ash"]
 nightly = ["simd_allocator"]
 simd_allocator = []
+ttf = ["rich-sdl2-rust-sys/ttf"]
 static = ["rich-sdl2-rust-sys/static"]
 dynamic = ["rich-sdl2-rust-sys/dynamic"]
 vendor = ["rich-sdl2-rust-sys/vendor"]
