--- a/deny.toml
+++ b/deny.toml
@@ -77,12 +77,7 @@ unlicensed = "deny"
 # List of explicitly allowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
-allow = [
-    "MIT",
-    "Apache-2.0",
-    "ISC",
-    "BSD-3-Clause",
-]
+allow = ["MIT", "Apache-2.0", "ISC", "BSD-3-Clause", "Unicode-DFS-2016"]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
@@ -132,8 +127,8 @@ exceptions = [
 # and the crate will be checked normally, which may produce warnings or errors
 # depending on the rest of your configuration
 #license-files = [
-    # Each entry is a crate relative path, and the (opaque) hash of its contents
-    #{ path = "LICENSE", hash = 0xbd0eed23 }
+# Each entry is a crate relative path, and the (opaque) hash of its contents
+#{ path = "LICENSE", hash = 0xbd0eed23 }
 #]
 
 [licenses.private]
@@ -212,4 +207,3 @@ github = []
 gitlab = []
 # 1 or more bitbucket.org organizations to allow git sources for
 bitbucket = []
-
