chore: Allow Unicode-DFS-2016 license (#7)
* chore: Allow Unicode-DFS-2016 license

* ci: Fix paths

* ci: Use pull_request trigger

--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -1,8 +1,9 @@
 name: Security audit
 
 on:
-  push:
+  pull_request:
     paths:
+      - "**/deny.toml"
       - "**/Cargo.toml"
       - "**/Cargo.lock"
 
