feat: Add mixer feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ vulkan = ["ash"]
 nightly = ["simd_allocator"]
 simd_allocator = []
 ttf = ["rich-sdl2-rust-sys/ttf"]
+mixer = ["rich-sdl2-rust-sys/mixer"]
 static = ["rich-sdl2-rust-sys/static"]
 dynamic = ["rich-sdl2-rust-sys/dynamic"]
 vendor = ["rich-sdl2-rust-sys/vendor"]
