--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ vulkan = ["ash"]
 nightly = ["simd_allocator"]
 simd_allocator = []
 ttf = ["rich-sdl2-rust-sys/ttf"]
-mixer = ["rich-sdl2-rust-sys/mixer"]
+mixer = ["rich-sdl2-rust-sys/mixer", "once_cell"]
 static = ["rich-sdl2-rust-sys/static"]
 dynamic = ["rich-sdl2-rust-sys/dynamic"]
 vendor = ["rich-sdl2-rust-sys/vendor"]
@@ -28,6 +28,7 @@ bitflags = "1.3.2"
 static_assertions = "1.1.0"
 typed-builder = "0.9.0"
 rich-sdl2-rust-sys = { path = "./rich-sdl2-rust-sys", version = "0.2.4" }
+once_cell = { version = "1.13.0", optional = true }
 
 [workspace]
 members = ["rich-sdl2-rust-sys"]
