--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -47,7 +47,7 @@ jobs:
         run: cargo test --verbose --features vendor
       - name: Create docs
         if: matrix.os == 'ubuntu-latest'
-        run: cargo +nightly doc --features vendor,nightly,vulkan,simd_allocator,ttf --no-deps
+        run: cargo +nightly doc --features vendor,nightly,vulkan,simd_allocator,ttf,mixer --no-deps
 
       - uses: actions/upload-artifact@v3
         if: matrix.os == 'ubuntu-latest'
